fixing image spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -59,7 +59,14 @@ sub, sup {
 }
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
-img { border: 0; }
+/*img { border: 0; }*/
+
+img {
+    display: block; /* Ensure images are displayed as blocks */
+    margin: 0 auto; /* Center-align images horizontally */
+    max-width: 100%; /* Ensure images do not exceed the width of their container */
+}
+
 svg:not(:root) { overflow: hidden; }
 figure { margin: 1em 40px; }
 hr { box-sizing: content-box; height: 0; }
@@ -2183,6 +2190,7 @@ body.page-template .post-title {
     .read-next .post {
         width: 100%;
     }
+
 
 }
 
